log
Wed 06 Sep 2023 04:57:49 PM UTC: 
 tests:  0|6
total_score: 0/70
c3cf88f
Wed 06 Sep 2023 05:21:29 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|0
00d3642
Wed 06 Sep 2023 05:23:19 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:11: error: ‘*mapa.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   58 |       mapa->buckets[i] = NULL;
      |       ~~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8bb4c45
Wed 06 Sep 2023 05:24:34 PM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
1e0843c
Wed 06 Sep 2023 05:31:21 PM UTC: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
11bbd47
Wed 06 Sep 2023 05:31:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c126e35
Wed 06 Sep 2023 06:16:39 PM UTC: 
 hashmap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:22: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   54 |         map->buckets = dato;
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
68684d1
Wed 06 Sep 2023 06:16:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d2e9c53
Wed 06 Sep 2023 06:18:15 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
ea6655f
Wed 06 Sep 2023 06:19:14 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
2cee6ae
Wed 06 Sep 2023 06:22:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
809c87b
Wed 06 Sep 2023 06:24:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3eacac9
Wed 06 Sep 2023 06:25:30 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
1f04004
Wed 06 Sep 2023 06:26:11 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
4560cf6
Wed 06 Sep 2023 06:32:51 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
41b8640
Wed 06 Sep 2023 06:34:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
05b4f5a
Wed 06 Sep 2023 06:36:04 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
13412cb
